[gd_scene load_steps=3 format=2]

[ext_resource path="res://data/UI/editorNode.gd" type="Script" id=1]
[ext_resource path="res://data/graphics/UI/add.png" type="Texture" id=2]

[node name="Panel" type="Panel"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
mouse_filter = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="TextEdit" parent="Label"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
wrap_enabled = true

[node name="indicator" type="Label" parent="."]
visible = false
margin_left = -0.157776
margin_top = -11.8334
margin_right = 66.8422
margin_bottom = 2.16658
text = "MODIFIED"

[node name="add" type="Sprite" parent="."]
visible = false
position = Vector2( 48.7245, 39.9624 )
texture = ExtResource( 2 )
[connection signal="gui_input" from="Label" to="." method="_on_Label_gui_input"]
[connection signal="mouse_entered" from="Label" to="." method="_on_Label_mouse_entered"]
[connection signal="mouse_exited" from="Label" to="." method="_on_Label_mouse_exited"]
[connection signal="gui_input" from="Label/Edit" to="." method="_on_Edit_gui_input"]
