extends Panel

signal button_clicked(a)
signal button_hover(a)

var id : String = "init"

func _ready():
	pass

func _on_Label_gui_input(event):
	pass # Replace with function body.


func _on_Label_mouse_entered():
	pass # Replace with function body.


func _on_Label_mouse_exited():
	pass # Replace with function body.
